[gd_scene load_steps=7 format=2]

[ext_resource path="res://Debug/DebugHUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Levels/LevelManager.gd" type="Script" id=3]
[ext_resource path="res://Levels/MapReader3D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/MapReader2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="DebugHUD" parent="." instance=ExtResource( 1 )]

[node name="LevelManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="MapReader2D" parent="LevelManager" instance=ExtResource( 5 )]

[node name="MapReader3D" parent="LevelManager" instance=ExtResource( 4 )]

[node name="Player" parent="LevelManager/MapReader3D" instance=ExtResource( 6 )]
